--- a/app/debug.conf
+++ b/app/debug.conf
@@ -11,9 +11,9 @@ CONFIG_DEBUG_OPTIMIZATIONS=y
 # console
 CONFIG_CONSOLE=y
 
-# UART console
-CONFIG_SERIAL=y
-CONFIG_UART_CONSOLE=y
+# RTT console
+CONFIG_RTT_CONSOLE=y
+CONFIG_USE_SEGGER_RTT=y
 
 # logging
 CONFIG_LOG=y
