--- a/west.yml
+++ b/west.yml
@@ -17,3 +17,4 @@ manifest:
         name-allowlist:
           - cmsis      # required by the ARM port
           - hal_nordic # required by the lumen board (Nordic based)
+          - segger     # required for RTT debug logging
