--- a/app/prj.conf
+++ b/app/prj.conf
@@ -7,3 +7,9 @@
 CONFIG_SPI=y
 CONFIG_LED_STRIP=y
 CONFIG_WS2812_STRIP=y
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DIS=y
+CONFIG_BT_DEVICE_NAME="lumen"
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
+CONFIG_BT_DEVICE_NAME_MAX=64
