--- a/west.yml
+++ b/west.yml
@@ -4,18 +4,12 @@
 
 manifest:
   remotes:
-    - name: zephyrproject-rtos
-      url-base: https://github.com/zephyrproject-rtos
+    - name: ncs
+      url-base: https://github.com/nrfconnect
 
   projects:
-    - name: zephyr
-      remote: zephyrproject-rtos
-      revision: main
-      import:
-        # By using name-allowlist we can clone only the modules that are
-        # strictly needed by the application.
-        name-allowlist:
-          - cmsis      # required by the ARM port
-          - hal_nordic # required by the lumen board (Nordic based)
-          - segger     # required for RTT debug logging
-          - tinycrypt
+    - name: nrf
+      remote: ncs
+      repo-path: sdk-nrf
+      revision: v2.5.0-rc2
+      import: true
