Add BLE OTA DFU

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -7,9 +7,57 @@
 CONFIG_SPI=y
 CONFIG_LED_STRIP=y
 CONFIG_WS2812_STRIP=y
+
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DIS=y
 CONFIG_BT_DEVICE_NAME="lumen"
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=64
+
+# This option enables the MCUmgr support, which is required for the DFU process.
+CONFIG_MCUMGR=y
+# This option enables the MCUmgr image management handlers, which are required
+# for the DFU process.
+CONFIG_MCUMGR_GRP_IMG=y
+# This option enables the MCUmgr OS management handlers, which are required for
+# the DFU process.
+CONFIG_MCUMGR_GRP_OS=y
+
+# This option enables the MCUmgr notification hook support, which allows the
+# module to listen for an MCUmgr event.
+CONFIG_MCUMGR_MGMT_NOTIFICATION_HOOKS=y
+# This option enables the MCUmgr upload check hook, which sends image upload
+# requests to the registered callbacks.
+CONFIG_MCUMGR_GRP_IMG_UPLOAD_CHECK_HOOK=y
+# This option enables the MCUmgr image status hooks, which report the DFU
+# status to the registered callbacks.
+CONFIG_MCUMGR_GRP_IMG_STATUS_HOOKS=y
+# This option enables the MCUmgr OS reset hook, which sends reset requests to
+# the registered callbacks.
+CONFIG_MCUMGR_GRP_OS_RESET_HOOK=y
+
+# MCUmgr dependencies
+CONFIG_NET_BUF=y
+CONFIG_ZCBOR=y
+CONFIG_CRC=y
+CONFIG_IMG_MANAGER=y
+CONFIG_STREAM_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH=y
+
+# The DFU over Simple Management Protocol in Zephyr is supported only with the
+# MCUboot bootloader.
+CONFIG_BOOTLOADER_MCUBOOT=y
+
+# Enable the bluetooth transport for the MCUmgr’s SMP protocol.
+CONFIG_MCUMGR_TRANSPORT_BT=y
+CONFIG_CAF=y
+CONFIG_CAF_BLE_SMP_TRANSFER_EVENTS=y
+
+# Allow for large Bluetooth data packets.
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_BUF_ACL_RX_SIZE=256
+
+# Some command handlers require a large stack.
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
