--- a/west.yml
+++ b/west.yml
@@ -11,5 +11,5 @@ manifest:
     - name: nrf
       remote: ncs
       repo-path: sdk-nrf
-      revision: v2.5.0-rc2
+      revision: v2.5.0
       import: true
