Play with GitHub actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           mv lumen-sdk/twister-out/lumen/app.default/zephyr/merged.hex \
-            merged_${{ GITHUB_REF_NAME }}_${{ GITHUB_SHA }}.hex
+            merged_${{ github.ref_name }}_${{ github.sha }}.hex
           mv lumen-sdk/twister-out/lumen/app.default/zephyr/app_update.bin \
-            app_update_${{ GITHUB_REF_NAME }}_${{ GITHUB_SHA }}.bin
+            app_update_${{ github.ref_name }}_${{ github.sha }}.bin
           ls -al > test.txt
 
       - name: Release
