Unique device name from hardware id

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -15,6 +15,8 @@ CONFIG_BT_DEVICE_NAME="lumen"
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=64
 
+CONFIG_HWINFO=y
+
 # This option enables the MCUmgr support, which is required for the DFU process.
 CONFIG_MCUMGR=y
 # This option enables the MCUmgr image management handlers, which are required
