--- a/boards/arm/lumen/lumen.dts
+++ b/boards/arm/lumen/lumen.dts
@@ -29,23 +29,27 @@
 	status = "okay";
 };
 
-&spi0 {
+&spi3 {
 	compatible = "nordic,nrf-spim";
 	status = "okay";
-	pinctrl-0 = <&spi0_default>;
-	pinctrl-1 = <&spi0_sleep>;
+	pinctrl-0 = <&spi3_default>;
+	pinctrl-1 = <&spi3_sleep>;
 	pinctrl-names = "default", "sleep";
 
 	led_strip: ws2812@0 {
 		compatible = "worldsemi,ws2812-spi";
 		reg = <0>;
-		spi-max-frequency = <4000000>;
 		chain-length = <30>;
+
+		/* Timing for SK6812-type LEDs */
+		spi-max-frequency = <6000000>; /* 1 / 6MHz = 167ns */
+		spi-one-frame = <0xF0>;  /* 167ns * 4 = 0.668us */
+		spi-zero-frame = <0xC0>; /* 167ns * 2 = 0.334us */
+
 		color-mapping = <LED_COLOR_ID_GREEN
 				 LED_COLOR_ID_RED
-				 LED_COLOR_ID_BLUE>;
-		spi-one-frame = <0x70>;
-		spi-zero-frame = <0x60>;
+				 LED_COLOR_ID_BLUE
+				 LED_COLOR_ID_WHITE>;
 	};
 };
 
