--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,3 +1,5 @@
 # Copyright (c) 2021 Nordic Semiconductor ASA
 # Copyright (c) 2023 Leon Rinkel
 # SPDX-License-Identifier: Apache-2.0
+
+add_subdirectory_ifdef(CONFIG_LUMEN_WS2812_STRIP ws2812)
