--- a/app/prj.conf
+++ b/app/prj.conf
@@ -8,14 +8,29 @@ CONFIG_SPI=y
 CONFIG_LED_STRIP=y
 CONFIG_LUMEN_WS2812_STRIP=y
 
+CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
+CONFIG_BT_SETTINGS=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_RUNTIME=y
+CONFIG_BT_DIS_SETTINGS=y
+CONFIG_BT_DIS_STR_MAX=64
+
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_SMP=y
+CONFIG_BT_SMP_ENFORCE_MITM=y
+CONFIG_BT_SMP_SC_ONLY=y
+CONFIG_BT_SIGNING=y
+CONFIG_BT_PRIVACY=y
+CONFIG_BT_FIXED_PASSKEY=y
 CONFIG_BT_DIS=y
 CONFIG_BT_DEVICE_NAME="lumen"
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=64
-
-CONFIG_HWINFO=y
 
 # This option enables the MCUmgr support, which is required for the DFU process.
 CONFIG_MCUMGR=y
